// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə gɪŋ siːz ðə wʊdh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔːdɔːg siː ðə wʊwʊdh",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə gɪŋ wɔːgɪŋz æːt ðə ɹɪfəɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə gɪŋ nat siːz ðə wʊdh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾeːbeː βidt dupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hæhædeː βidnt dudupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego do tuam",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾeːbeː æbbudt foɾœː fdubeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾeːbeː non βidt dupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "“king” lukin foːweːli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "foːfoːweːli lukin foːfoːweːli",
    },
    {
      "english": "i give you the bread",
      "target": "mi kæːnæː sina",
    },
    {
      "english": "the king walks at the river",
      "target": "“king” θæːweː fæːki teːlo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "“king” ala lukin foːweːli",
    },
  ],
  "preset": "tokipona",
}
`;
